--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.mobile-view-appear, .mobile-view-enter {
+  transform: translate(100%);
+  opacity: 0;
+}
+
+.mobile-view-appear-active, .mobile-view-enter-active {
+  transform: translate(0%);
+  opacity: 1;
+  transition: transform 900ms ease, opacity 500ms ease;
+}
+
+.mobile-view-exit {
+  transform: translate(0%);
+}
+
+.mobile-view-exit-active {
+  transform: translate(100%);
+  transition: transform 900ms ease;
+}
+
+.middle-view-enter {
+  transform: translate(-100%);
+}
+
+.middle-view-enter-active {
+  transform: translate(0%);
+  transition: transform 900ms ease;
+}
