--- a/src/index.css
+++ b/src/index.css
@@ -13,31 +13,22 @@ code {
     monospace;
 }
 
-.mobile-view-appear, .mobile-view-enter {
+.enter-from-right-enter {
   transform: translate(100%);
   opacity: 0;
 }
 
-.mobile-view-appear-active, .mobile-view-enter-active {
+.enter-from-right-enter-active {
   transform: translate(0%);
   opacity: 1;
-  transition: transform 900ms ease, opacity 500ms ease;
+  transition: transform 300ms ease, opacity 300ms ease;
 }
 
-.mobile-view-exit {
-  transform: translate(0%);
-}
-
-.mobile-view-exit-active {
-  transform: translate(100%);
-  transition: transform 900ms ease;
-}
-
-.middle-view-enter {
+.enter-from-left-enter {
   transform: translate(-100%);
 }
 
-.middle-view-enter-active {
+.enter-from-left-enter-active {
   transform: translate(0%);
-  transition: transform 900ms ease;
+  transition: transform 300ms ease;
 }
