--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,14 @@ code {
   }
 }
 
+.ant-notification {
+  width: auto !important;
+  min-width: 10rem;
+  margin-right: 1rem !important;
+}
+
+.t-notification .ant-notification-notice-close {
+  right: 0.8rem;
+  top: 0.6rem;
+}
+
