--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -3,4 +3,10 @@
   .ant-tabs-nav .ant-tabs-tab-active {
     color: #07c160;
   }
+  .ant-tabs-ink-bar {
+    background-color: #07c160;
+  }
+  .ant-tabs-nav .ant-tabs-tab:hover {
+    color: #07c160;
+  }
 }
