--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,15 @@
+$primay-color: #07c160;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /*background-color: #35322F;*/
   background-color: #fff;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   box-sizing: border-box;
 }
 
@@ -33,8 +35,8 @@ h4 {
   font-size: 1rem;
 }
 
-textarea{
-    font-size: 1rem;
+textarea {
+  font-size: 1rem;
 }
 
 .t-container {
@@ -73,7 +75,7 @@ textarea{
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -98,28 +100,30 @@ code {
 }
 
 .backdrop-blur-right {
-  background-color: hsl(0,0%,95%); /* bgColorPrimary */
+  background-color: hsl(0, 0%, 95%); /* bgColorPrimary */
 }
 .backdrop-blur-middle {
-  background-color: #35322F;
+  background-color: #35322f;
 }
 .backdrop-blur-left {
-  background-color: #2A2723;
+  background-color: #2a2723;
 }
 
-@supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+@supports (
+  (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))
+) {
   .backdrop-blur-right {
-    background-color: hsla(0,0%,95%,0.9); /* bgColorPrimaryRgba */
+    background-color: hsla(0, 0%, 95%, 0.9); /* bgColorPrimaryRgba */
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
   }
   .backdrop-blur-middle {
-    background-color: rgba(53,50,47,0.9);
+    background-color: rgba(53, 50, 47, 0.9);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
   }
   .backdrop-blur-left {
-    background-color: rgba(42,39,35,0.9);
+    background-color: rgba(42, 39, 35, 0.9);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
   }
@@ -129,5 +133,19 @@ code {
   padding: 0.2rem 0.7rem !important;
   display: flex;
   align-items: center;
-  background-color: #2A2723 !important; /*bgColorDark */
+  background-color: #2a2723 !important; /*bgColorDark */
+}
+
+// 覆盖antd tabs样式
+.ant-tabs-nav .ant-tabs-tab-active {
+  color: $primay-color;
+}
+.ant-tabs-ink-bar {
+  background-color: $primay-color;
+}
+.ant-tabs-nav .ant-tabs-tab:hover {
+  color: $primay-color;
+}
+.ant-tabs-nav .ant-tabs-tab {
+  padding: 12px 6px;
 }
