--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -1,1 +1,4 @@
-@green: #07c160;
+@primary-color: #07c160;
+@primary-color-De10: desaturate(@primary-color, 10%);
+@primary-color-Sa10: saturate(@primary-color, 10%);
+@white: #fff;
