--- a/src/index.scss
+++ b/src/index.scss
@@ -149,3 +149,11 @@ code {
 .ant-tabs-nav .ant-tabs-tab {
   padding: 12px 6px;
 }
+
+.svg-icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
