--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -2,8 +2,10 @@
 @primary-color-De10: desaturate(@primary-color, 10%);
 @primary-color-Sa10: saturate(@primary-color, 10%);
 @white: #fff;
+@warn-color: #fa5151;
 
-@text-color-tip: rgba(0,0,0,.3);
+@text-color-tip: rgba(0, 0, 0, 0.3);
 
 @border-radius: 3px;
-@box-shadow:  0 2px 3px -1px rgba(0,0,0,0.2),0 5px 10px -10px rgba(0,0,0,0.1);
+@box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.2),
+  0 5px 10px -10px rgba(0, 0, 0, 0.1);
