--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -1,6 +1,7 @@
 @primary-color: #07c160;
 @primary-color-De10: desaturate(@primary-color, 10%);
 @primary-color-Sa10: saturate(@primary-color, 10%);
+@primary-color-Fa10: fade(@primary-color, 10%);
 @white: #fff;
 @warn-color: #fa5151;
 
@@ -9,3 +10,6 @@
 @border-radius: 3px;
 @box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.2),
   0 5px 10px -10px rgba(0, 0, 0, 0.1);
+
+@text-color-title: rgba(0, 0, 0, 0.9);
+@text-color-desc: rgba(0, 0, 0, 0.5);
