--- a/src/components/Todo/styles.less
+++ b/src/components/Todo/styles.less
@@ -14,6 +14,14 @@
   padding-right: 16px;
 }
 
+.todoInput {
+  display: flex;
+  padding: 0.3rem;
+  background-color: #fff;
+  flex: auto;
+  color: @text-color-title;
+}
+
 .todoRowOpen {
   border-radius: @border-radius @border-radius 0 0;
   box-shadow: @box-shadow;
@@ -53,4 +61,15 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.childrenContent {
+  background-color: @primary-color-Fa10;
+  min-height: 3rem;
+  overflow: auto;
+  max-height: 12rem;
+}
+
+.childrenContentOpen {
+  border-radius: 0 0 @border-radius @border-radius;
 }
