--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -4,6 +4,7 @@
 @primary-color-Fa10: fade(@primary-color, 10%);
 @white: #fff;
 @warn-color: #fa5151;
+@danger-color: #dc3545;
 
 @text-color-tip: rgba(0, 0, 0, 0.3);
 
@@ -13,3 +14,4 @@
 
 @text-color-title: rgba(0, 0, 0, 0.9);
 @text-color-desc: rgba(0, 0, 0, 0.5);
+@text-color-Tip: rgba(0, 0, 0, 0.3);
