--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -14,4 +14,9 @@
     display: flex;
     align-items: center;
   }
+  .flexRowCenter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
