--- a/src/components/Tomato/styles.less
+++ b/src/components/Tomato/styles.less
@@ -1,7 +1,7 @@
 @import '../../styles/var.less';
 .tomatoGroup {
-  margin: 0.3rem 0.6rem 0.6rem 0.6rem;
-  background-color: @white;
+  margin: 0.6rem 0.6rem 0.6rem 0.6rem;
+  background-color: @bg-color-white-darker;
   border-radius: @border-radius;
 }
 
