--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -9,9 +9,11 @@
 @text-color-tip: rgba(0, 0, 0, 0.3);
 
 @border-radius: 3px;
-@box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.2),
-  0 5px 10px -10px rgba(0, 0, 0, 0.1);
+@box-shadow: 0 4px 5px -5px rgba(0, 0, 0, 0.2),
+  0 10px 15px -15px rgba(0, 0, 0, 0.1);
 
 @text-color-title: rgba(0, 0, 0, 0.9);
 @text-color-desc: rgba(0, 0, 0, 0.5);
 @text-color-Tip: rgba(0, 0, 0, 0.3);
+
+@bg-color-white-darker: hsl(0, 0%, 95%);
