--- a/src/components/Todo/styles.less
+++ b/src/components/Todo/styles.less
@@ -89,8 +89,9 @@
 .childrenContent {
   background-color: @white;
   min-height: 3rem;
-  overflow: auto;
-  max-height: 12rem;
+  // overflow: auto;
+  // max-height: 12rem;
+  padding: 1px 0;
   border-radius: 0 0 @border-radius @border-radius;
   box-shadow: @box-shadow;
 }
