--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,3 +1,5 @@
+@import './var.less';
+
 :global {
   .fontIcon {
     font-size: 1.4rem;
@@ -18,5 +20,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .emptyText {
+    text-align: center;
+    color: @text-color-tip;
+    font-weight: 500;
   }
 }
