--- a/src/components/todayTomato/styles.less
+++ b/src/components/todayTomato/styles.less
@@ -1,5 +1,13 @@
+@import '@/styles/var.less';
 .cardContent {
-    padding: 0.2rem 0.2rem;
+  padding: 0.2rem 0.2rem;
+}
+
+.date {
+  margin-right: 1.2rem;
+  font-weight: 600;
+  border-bottom: 2px solid @danger-color;
+  padding-bottom: 1px;
 }
 
 .todayTomatoContent {
