style: 给显示今日加了transition-delay
todo: 把切换日期的按钮放到左侧来

--- a/src/components/todayTomato/styles.less
+++ b/src/components/todayTomato/styles.less
@@ -10,6 +10,19 @@
   padding-bottom: 1px;
 }
 
+.showTodayBtn {
+  margin-left: 8px;
+  background-color: #e2e6ea;
+  transition: opacity 100ms;
+  transition-delay: 400ms;
+  opacity: 1;
+}
+.showTodayBtnHide {
+  opacity: 0;
+  transition: opacity 100ms;
+  transition-delay: 0;
+}
+
 .todayTomatoContent {
   padding-top: 2rem;
 
