feat: 增加了库react-svginline

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -21,6 +21,11 @@
     align-items: center;
     justify-content: center;
   }
+  .flexRowCol {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .emptyText {
     text-align: center;
