style: 添加了样式还要调

--- a/src/components/todayTomato/styles.less
+++ b/src/components/todayTomato/styles.less
@@ -10,6 +10,45 @@
   padding-bottom: 1px;
 }
 
+.dateBtnGroup {
+  margin-left: 10px;
+  position: relative;
+  width: 20px;
+  height: 27px;
+  border: @default-border; 
+  border-radius: @border-radius;
+}
+
+.dateBtnGroup2 {
+  margin-left: 10px;
+  position: relative;
+  width: 20px;
+  height: 27px;
+  border-radius: @border-radius;
+  background-color: @white;
+}
+
+.iconBtn {
+  position: absolute;
+  color: @text-color-desc;
+  padding: 0 3px;
+  box-shadow: @box-shadow;
+  cursor: pointer;
+  user-select: none;
+  margin: 0 auto;
+}
+.iconBtn:hover {
+  background-color: @white;
+}
+
+.up {
+  top: 0;
+}
+
+.down {
+  bottom: 0;
+}
+
 .showTodayBtn {
   margin-left: 8px;
   background-color: #e2e6ea;
