--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -6,6 +6,8 @@
 @warn-color: #fa5151;
 @danger-color: #dc3545;
 
+@primary-border: 1px solid @warn-color;
+@default-border: 1px solid @text-color-tip;
 @border-radius: 3px;
 @box-shadow: 0 4px 5px -5px rgba(0, 0, 0, 0.2),
   0 10px 15px -15px rgba(0, 0, 0, 0.1);
