--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -12,6 +12,11 @@
 @box-shadow: 0 4px 5px -5px rgba(0, 0, 0, 0.2),
   0 10px 15px -15px rgba(0, 0, 0, 0.1);
 
+@box-shadow-big: 4px 4px 5px  rgba(0, 0, 0, 0.2),
+  10px 10px 25px  rgba(0, 0, 0, 0.1),
+  -4px -4px 5px  rgba(0, 0, 0, 0.2),
+  -10px -10px 25px  rgba(0, 0, 0, 0.1);
+
 @text-color-title: rgba(0, 0, 0, 0.9);
 @text-color-desc: rgba(0, 0, 0, 0.5);
 @text-color-tip: rgba(0, 0, 0, 0.3);
