style: 改了富文本中popover的样式

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -32,4 +32,14 @@
     color: @text-color-tip;
     font-weight: 500;
   }
+
+  .ant-popover.richEditor {
+    padding-top: 0;
+    .ant-popover-inner-content {
+      padding: 6px 10px;
+    }
+    .ant-popover-arrow {
+      display: none;
+    }
+  }
 }
