--- a/src/components/richEditor/components/editorButton/styles.less
+++ b/src/components/richEditor/components/editorButton/styles.less
@@ -1,5 +1,6 @@
 .editorButton {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   height: 32px;
   width: auto;
   min-width: 32px;
