feat： linkModal update

--- a/src/components/richEditor/components/editorButton/styles.less
+++ b/src/components/richEditor/components/editorButton/styles.less
@@ -26,3 +26,9 @@
   background-color: #e8e8e8;
   border: 1px solid transparent;
 }
+
+.editorButtonDisabled {
+  background-color: #000;
+  opacity: 0.25;
+  cursor: not-allowed;
+}
