--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -42,4 +42,14 @@
       display: none;
     }
   }
+
+  .ant-popover.myPop {
+    padding-top: 0;
+    .ant-popover-inner-content {
+      padding: 6px 0px;
+    }
+    .ant-popover-arrow {
+      display: none;
+    }
+  }
 }
