--- a/src/components/richEditor/styles.less
+++ b/src/components/richEditor/styles.less
@@ -1,3 +1,6 @@
+// 选中一段文字后,在进行弹框操作时的背景色
+@d-selected-color: #dee0e3;
+
 .toolbar {
   padding: 3px 4px;
   composes: flexRow from global;
@@ -7,4 +10,76 @@
 .editorBody {
   padding: 0.6em 1em;
   min-height: 6em;
+  height: 18em;
+  overflow: auto;
+}
+
+.dSelected {
+  background-color: @d-selected-color;
+}
+
+.pcStyle {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 600;
+    letter-spacing: 0.02em;
+  }
+  h1 {
+    font-size: 30px;
+    margin: 36px 0 22px;
+  }
+  h2 {
+    font-size: 22px;
+    margin: 1em 0 8px;
+  }
+  h3 {
+    font-size: 20px;
+    margin: 1em 0 8px;
+  }
+  h4 {
+    font-size: 18px;
+    margin: 1em 0 8px;
+  }
+  h5,
+  h6 {
+    font-size: 16px;
+    margin: 1em 0 8px;
+  }
+}
+
+.mobileStyle {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 500;
+    letter-spacing: 0.02em;
+  }
+  h1 {
+    font-size: 24px;
+    margin: 36px 0 22px;
+  }
+  h2 {
+    font-size: 20px;
+    margin: 1em 0 8px;
+  }
+  h3 {
+    font-size: 18px;
+    margin: 1em 0 8px;
+  }
+  h4 {
+    font-size: 16px;
+    margin: 1em 0 8px;
+  }
+  h5,
+  h6 {
+    font-size: 14px;
+    margin: 1em 0 8px;
+  }
 }
