--- a/src/index.scss
+++ b/src/index.scss
@@ -19,19 +19,26 @@ html {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 
 h3 {
-  font-size: 1.3rem;
-  margin: 0.8rem 0;
+  font-size: 1.75rem;
 }
 
 h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
   font-size: 1rem;
 }
 
